// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgreementVerifiedAttributesSection > should match snapshot when agreement and agreementVerifiedAttributeDrawerProps are defined 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1p6ecov-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
        >
          verified.label
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          verified.description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="css-1p5q5e5-MuiStack-root"
        />
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
              >
                noAttributesRequiredAlert.consumer
              </span>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-modal MuiModal-root css-17eom3u-MuiModal-root-MuiDrawer-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-i9fmh8-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper MuiDrawer-paperAnchorRight css-1160xiw-MuiPaper-root-MuiDrawer-paper"
      tabindex="-1"
    >
      <div
        class="MuiBox-root css-o36syg"
      >
        <button
          aria-label="closeIconAriaLabel"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="css-139xa77-MuiStack-root"
      >
        <div
          class="css-xm2ers-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1y8v3j7-MuiTypography-root"
          >
            drawer.revoke.title
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
          >
            drawer.revoke.subtitle
          </p>
        </div>
        <div
          class="MuiBox-root css-be40y1"
        >
          <div
            class="css-nen11g-MuiStack-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
            >
              drawer.revoke.info.title
            </p>
            <p
              class="MuiTypography-root MuiTypography-body2 css-c9fm5x-MuiTypography-root"
            >
              drawer.revoke.info.description
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-iugrlp"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-fullWidth css-5pqyj8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            actions.revoke
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`AgreementVerifiedAttributesSection > should match snapshot when e-service does not require verified attributes 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1p6ecov-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
        >
          verified.label
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          verified.description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="css-1p5q5e5-MuiStack-root"
        />
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
              >
                noAttributesRequiredAlert.provider
              </span>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`AgreementVerifiedAttributesSection > should match snapshot when e-service requires verified attributes 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1p6ecov-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
        >
          verified.label
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          verified.description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="css-1p5q5e5-MuiStack-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bj42sx-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardHeader-root css-1g82uv9-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                >
                  group.manage.success.provider
                </span>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
            >
              <ul
                class="css-zenfnj-MuiStack-root"
              >
                <div
                  class="css-1yo1jo6-MuiStack-root"
                >
                  <div
                    class="css-1yo1jo6-MuiStack-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4b67si-MuiSvgIcon-root"
                      data-testid="CheckCircleIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                    >
                      <div
                        aria-controls=":r1:"
                        aria-expanded="false"
                        class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                        id=":r2:"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                          />
                        </div>
                        <div
                          class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="ExpandMoreIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                        style="min-height: 0px;"
                      >
                        <div
                          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                        >
                          <div
                            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                          >
                            <div
                              aria-labelledby=":r2:"
                              class="MuiAccordion-region"
                              id=":r1:"
                              role="region"
                            >
                              <div
                                class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="css-1yo1jo6-MuiStack-root"
                >
                  <div
                    class="css-1yo1jo6-MuiStack-root"
                  />
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                    >
                      <div
                        aria-controls=":r3:"
                        aria-expanded="false"
                        class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                        id=":r4:"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                          />
                        </div>
                        <div
                          class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="ExpandMoreIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                        style="min-height: 0px;"
                      >
                        <div
                          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                        >
                          <div
                            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                          >
                            <div
                              aria-labelledby=":r4:"
                              class="MuiAccordion-region"
                              id=":r3:"
                              role="region"
                            >
                              <div
                                class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </ul>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-dxqih4-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardHeader-root css-97snmn-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                >
                  group.manage.warning.verified.provider
                </span>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
            >
              <ul
                class="css-zenfnj-MuiStack-root"
              >
                <div
                  class="css-1yo1jo6-MuiStack-root"
                >
                  <div
                    class="css-1yo1jo6-MuiStack-root"
                  />
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                    >
                      <div
                        aria-controls=":r5:"
                        aria-expanded="false"
                        class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                        id=":r6:"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                          />
                        </div>
                        <div
                          class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="ExpandMoreIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                        style="min-height: 0px;"
                      >
                        <div
                          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                        >
                          <div
                            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                          >
                            <div
                              aria-labelledby=":r6:"
                              class="MuiAccordion-region"
                              id=":r5:"
                              role="region"
                            >
                              <div
                                class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="css-1yo1jo6-MuiStack-root"
                >
                  <div
                    class="css-1yo1jo6-MuiStack-root"
                  />
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                    >
                      <div
                        aria-controls=":r7:"
                        aria-expanded="false"
                        class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                        id=":r8:"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                          />
                        </div>
                        <div
                          class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="ExpandMoreIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                        style="min-height: 0px;"
                      >
                        <div
                          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                        >
                          <div
                            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                          >
                            <div
                              aria-labelledby=":r8:"
                              class="MuiAccordion-region"
                              id=":r7:"
                              role="region"
                            >
                              <div
                                class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
